--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,13 +4,7 @@
 
 #overlay {
   background-image: url('/svg/topography.svg');
-  mix-blend-mode: overlay;
 }
 #gradient {
-  background: rgb(15, 118, 110);
-  background: radial-gradient(
-    circle,
-    rgba(15, 118, 110, 1) 0%,
-    rgba(15, 23, 42, 1) 100%
-  );
+  background-image: url('/svg/nnnoise.svg');
 }
