--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+#map {
+  background-image: url('/svg/topography.svg');
+  back-blend-mode: multiply;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+#noise {
+  background-image: url('/svg/nnnoise.svg');
+  mix-blend-mode: soft-light;
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+#grid {
+  background-image: url('/svg/tiny-checkers.svg');
+  background-repeat: repeat;
 }
